feat(api) : add new api to edit candidate data and fetch new candidate to update

--- a/public/html/register.html
+++ b/public/html/register.html
@@ -15,7 +15,7 @@
 
     <div class="login">
       <div id="loglogo">
-        <img src="../images/Login log.png" alt="Register logo" />
+        <img src="../components/Login log.png" alt="Register logo" />
       </div>
 
       <h2>Create an Account</h2>
