--- a/public/html/candidates.html
+++ b/public/html/candidates.html
@@ -157,7 +157,10 @@
                           <form id="taskForm">
                               <div class="mb-3">
                                   <label for="taskName" class="form-label">Task Name</label>
-                                  <input type="text" class="form-control" id="taskName" name="taskName">
+                                  <select name="taskName" id="taskName" class="form-select">
+                                    <option value="Web development">Web Development</option>
+                                    <option value="App development">App Development</option>
+                                  </select>
                               </div>
                               <div class="mb-3">
                                   <label for="assignedDate" class="form-label">Assigned Date</label>
@@ -170,10 +173,10 @@
                               <div class="mb-3">
                                   <label for="status" class="form-label">Status</label>
                                   <select class="form-select" id="status" name="status" onchange="toggleOtherField()">
-                                      <option value="completed">Completed</option>
-                                      <option value="pending">Pending</option>
-                                      <option value="rejected">Rejected</option>
-                                      <option value="rework">Task Rework</option>
+                                      <option value="Completed">Completed</option>
+                                      <option value="Pending">Pending</option>
+                                      <option value="Rejected">Rejected</option>
+                                      <option value="Task Rework">Task Rework</option>
                                   </select>
                               </div>
                               <div class="mb-3 otherField" style="display: none;">
@@ -183,6 +186,14 @@
                               <div class="mb-3 otherField" style="display: none;">
                                   <label for="reworkDeadlineDate" class="form-label">Rework Deadline Date</label>
                                   <input type="date" class="form-control" id="reworkDeadlineDate" name="reworkDeadlineDate">
+                              </div>
+                              <div class="mb-3 otherField" style="display: none;">
+                                <label for="rework_status" class="form-label">Status</label>
+                                  <select class="form-select" id="rework_status" name="rework_status">
+                                      <option value="Completed">Completed</option>
+                                      <option value="Pending" selected>Pending</option>
+                                      <option value="Rejected">Rejected</option>
+                                  </select>
                               </div>
                               <div class="mb-3">
                                   <label for="remark1" class="form-label">Remark</label>
@@ -298,8 +309,9 @@
                   </div>
               </div>
               <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                  <button type="button" class="btn btn-primary" id="submitBtn">Update</button>
+                <input type="hidden" id="candidate_id">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary" id="submitBtn">Update</button>
               </div>
           </div>
       </div>
