--- a/public/html/edit-candidate.html
+++ b/public/html/edit-candidate.html
@@ -9,6 +9,7 @@
               <div class="field">
                   <label><span><i class="fa-regular fa-user"></i> First name* </span></label>
                   <input type="text" id="fname" name="first_name" required>
+                  <input type="hidden" id="candidate_id" name ='candidate_id'>
               </div>
   
               <div class="field">
@@ -146,7 +147,6 @@
   
         <div class="rows">
           <div class="final">
-            <input type="hidden" id="candidate_id">
             <button type="submit" id="candidateFormUpdateBtn"><i class="fa fa-edit"></i> Update</button>
           </div>
         </div>
