feat : Developed preliminary interview page , updated backend based on ui changes in recruitment process page

--- a/public/html/add-candidate.html
+++ b/public/html/add-candidate.html
@@ -105,8 +105,8 @@
                     <div class="field">
                         <label><span><i class="fa-solid fa-calendar-days"></i> Experience</span></label>
                         <div class="exp">
-                            <span>Year</span><input type="number" name="experience" id="experience_year" step="1" max="100" min="0" maxlength="3">
-                            <span>Month</span><input type="number" name="experience" id="experience_month" step="1" max="12" min="0" maxlength="2">
+                            <span>Year</span><input type="number" name="experience_year" id="experience_year" step="1" max="100" min="0" maxlength="3">
+                            <span>Month</span><input type="number" name="experience_month" id="experience_month" step="1" max="12" min="0" maxlength="2">
                         </div>
                     </div>
                 </div>
