--- a/public/html/edit-candidate.html
+++ b/public/html/edit-candidate.html
@@ -47,6 +47,7 @@
             <div class="field">
                 <label><span><i class="fa-regular fa-file"></i> Resume</span></label>
                 <input type="file" name="resume" id="resume">
+                <a id="resumeLink" href="#" style="display: none;">Preview existing resume</a>
             </div>
             
             <div class="field">
@@ -104,8 +105,8 @@
              <div class="field">
                 <label><span><i class="fa-solid fa-calendar-days"></i> Experience</span></label>
                 <div class="exp">
-                    <span>Year</span><input type="number" name="experience" id="experience_year" step="1" max="100" min="0" maxlength="3">
-                    <span>Month</span><input type="number" name="experience" id="experience_month" step="1" max="12" min="0" maxlength="2">
+                    <span>Year</span><input type="number" name="experience_year" id="experience_year" step="1" max="100" min="0" maxlength="3">
+                    <span>Month</span><input type="number" name="experience_month" id="experience_month" step="1" max="12" min="0" maxlength="2">
                 </div>
             </div>
         </div>
@@ -153,4 +154,18 @@
       </form>
     </div>
   </div>
+<div class="modal fade" id="pdfModal" tabindex="-1" aria-labelledby="pdfModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-xl">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">PDF Preview</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <iframe id="pdfViewer" src="" width="100%" height="600px" style="border: none;"></iframe>
+      </div>
+    </div>
+  </div>
+</div>
+
   
