feat : develop of filter for datatables , updated the current status updating methods , creating of validation for input

--- a/public/html/add-candidate.html
+++ b/public/html/add-candidate.html
@@ -24,6 +24,7 @@
                     <div class="field">
                         <label><span><i class="fa-regular fa-envelope"></i> Email Id* </span></label>
                         <input type="email" id="email" name="email_id" required autocomplete="off">
+                        <div id="candidate_profile"></div>
                     </div>
                     
                     <div class="field">
