feat : developed JWT token to  employee login

--- a/public/html/candidates.html
+++ b/public/html/candidates.html
@@ -24,9 +24,9 @@
     <div class="content">
         <header>
             <h2 id="greeting">Good Morning HR name</h2>
-            <!-- <div class="headr">       
+            <div class="headr">       
                 <div id="profile"></div>
-            </div> -->
+            </div>
         </header>
         
           <div class="candidates" id="tableview" style="display: block;">
@@ -61,11 +61,18 @@
                         <label for="status_filter" class="mb-0">Status</label>
                         <select id="status_filter" name="status_filter" class="form-select form-select-sm " style="width: 200px;">
                         <option selected disabled>Select Status</option>
+                        <option>Candidate Added</option>
+                        <option>Task Not assinged</option>
                         <option>Task assigned</option>
-                        <option>Interviewed</option>
-                        <option>Onboarded</option>
-                        <option>Documents verified</option>
+                        <option>Task rework assigned</option>
+                        <option>Interview not scheduled</option>
+                        <option>Waiting for interview</option>
+                        <option>Re-Interview not scheduled</option>
+                        <option>Waiting for re-Interview</option>
                         <option>Documents not verified</option>
+                        <option>Documents verified</option>
+                        <option>Onboarded</option>
+                        <option>Rejected</option>
                         </select>
                     </div>
 
