fix: solved the issue in storing data of candidate audit logs , updated the  status content and updated page design

--- a/public/html/add-candidate.html
+++ b/public/html/add-candidate.html
@@ -1,7 +1,7 @@
     <div id="addModal" class="modal">
         <div class="modal-content">
 
-            <form id="addcandidateForm" class="form-content" action="/add_candidate" method="POST"  enctype="multipart/form-data">
+            <form id="addcandidateForm" class="form-content" enctype="multipart/form-data">
                 <div class="fixed">
                     <span class="addclosebtn">&times;</span>
                     <p>Personal details</p>
