--- a/public/html/candidates.html
+++ b/public/html/candidates.html
@@ -214,6 +214,7 @@
                             <div class="mb-3 col-md-6">
                                 <label for="pre_intv_by" class="form-label">Interviewed by</label>
                                   <select class="form-select" id="pre_intv_by" name="pre_intv_by">
+                                      <option value="" selected disabled>select Interviewer</option>
                                       <option value="i1">Interview1</option>
                                       <option value="i2">Interview2</option>
                                       <option value="i3">Interview3</option>
@@ -301,9 +302,10 @@
                               <div class="mb-3 col-md-6">
                                   <label for="interviewer" class="form-label">Interviewer Name</label>
                                   <select class="form-select" id="interviewer" name="interviewer">
-                                      <option value="i1">Interview1</option>
-                                      <option value="i2">Interview2</option>
-                                      <option value="i3">Interview3</option>
+                                    <option value="" selected disabled>select Interviewer</option>
+                                    <option value="i1">Interview1</option>
+                                    <option value="i2">Interview2</option>
+                                    <option value="i3">Interview3</option>
                                   </select>
                               </div>
                             </div>
