fix :  fixed the issue in audit log table

--- a/public/html/candidates.html
+++ b/public/html/candidates.html
@@ -274,7 +274,7 @@
                               <div class="mb-3 otherField col-md-6" style="display: none;">
                                   <label for="reworkAssignDate" class="form-label">Rework Assigned Date</label>
                                   <input type="date" class="form-control" id="reworkAssignDate" name="rework_assigned">
-                                  <p class=""></p>
+                                  <div id="dateValidation"></div>
                               </div>
                               <div class="mb-3 otherField col-md-6" style="display: none;">
                                   <label for="reworkDeadlineDate" class="form-label">Rework Deadline Date</label>
@@ -369,6 +369,7 @@
                               <div class="mb-3 col-md-6 re-interview" style="display: none;">
                                   <label for="reinterviewAt" class="form-label">Re-Interview Date</label>
                                   <input type="datetime-local" class="form-control" id="reinterviewAt" name="re_interview_at">
+                                  <div id="interviewdate"></div>
                               </div>
                             </div>
                             <div class="row">
